<resources>
    <string name="app_name">Magister Wear</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_setup">SetupActivity</string>

    <string name="text_login">Login</string>
    <string name="text_about">Over</string>
    <string name="text_no_results">Geen resultaten</string>
    <string name="text_select_school">Selecteer school</string>
    <string name="text_username">Gebruikersnaam</string>
    <string name="text_password">Wachtwoord</string>
    <string name="text_welcome">Welkom</string>
    <string name="text_current_lesson">Huidige les</string>

    <string name="nav_home">Home</string>
    <string name="nav_calendar">Agenda</string>

    <string name="status_logging_in">Inloggen&#8230;</string>
    <string name="status_error_while_logging_in">Fout tijdens inloggen&#8230;</string>
    <string name="status_logged_in">Ingelogd&#8230;</string>
    <string name="status_getting_data">Data ophalen&#8230;</string>
    <string name="status_almost_done">Bijna klaar&#8230;</string>


    <string name="msg_error">Fout is opgetreden</string>
</resources>
