<?xml version="1.0" encoding="utf-8"?>
<android.support.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Media"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_title"
        android:padding="0dp"
        android:layout_marginTop="20dp"
        app:boxedEdges="all">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/text_username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_login"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/text_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimaryDark"
                android:text="@string/text_login" />

        </RelativeLayout>

    </FrameLayout>
</android.support.wear.widget.BoxInsetLayout>